# calculadoradocidadao

./: .gitignore  .pre-commit-config.yaml  .python-version  .travis.yml  Makefile  Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
calculadoradocidadao/: api.py  demo1.py  demo2.py  site.py  views.py
test/: corrigir_pela_selic_result.html  test_index.py
tests/: test_demo1.py  test_demo2.py  test_index.py  test_views.py
tests/fixtures/: test_POST_ValidInput_ReturnValorCorrigidoPelaSelic.yaml
