[tool.poetry]
name = "calculadoradocidadao"
version = "0.1.0"
description = ""
authors = ["Bruno Furtado <bruno@bcfurtado.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "1.0"
Flask-RESTful = "0.3.6"
gunicorn = "19.7.1"
Jinja2 = "2.11.3"
lxml = "4.6.2"
requests = "2.20.0"
Werkzeug = "0.15.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
