[tool.poetry]
name = "calculadoradocidadao"
version = "0.1.0"
description = ""
authors = ["Bruno Furtado <bruno@bcfurtado.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.0.3"
Flask-RESTful = "0.3.9"
gunicorn = "19.7.1"
Jinja2 = "3.0.3"
lxml = "4.7.1"
requests = "2.20.0"
Werkzeug = "2.0.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]
